# quant-solver

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/quant_solver/: __init__.py  anth_client.py  cli.py  config.py  models.py  pipeline.py  utils.py
src/quant_solver/prompts/: critic.md  intake.md  solver_brute_force.md  solver_known_results.md  solver_monte_carlo.md  solver_symbolic.md  solver_symmetry.md
src/quant_solver/stages/: __init__.py  consensus.py  critic.py  intake.py  solvers.py  verifier.py
src/quant_solver/tools/: __init__.py  brute_force.py  monte_carlo.py  sandbox.py  sympy_tools.py
tests/: test_consensus.py  test_intake.py  test_pipeline_integration.py  test_tools.py  test_utils.py
